--- a/SourceCode/vajrang/Dec 2022/W3/AvailSolutions/Framework/Process.xaml
+++ b/SourceCode/vajrang/Dec 2022/W3/AvailSolutions/Framework/Process.xaml
@@ -2,11 +2,12 @@
   <x:Members>
     <x:Property sap2010:Annotation.AnnotationText="Transaction item to be processed." Name="in_TransactionItem" Type="InArgument(ui:QueueItem)" />
     <x:Property sap2010:Annotation.AnnotationText="Dictionary structure to store configuration data of the process (settings, constants and assets)." Name="in_Config" Type="InArgument(scg:Dictionary(x:String, x:Object))" />
+    <x:Property Name="outMyResult" Type="OutArgument(x:String)" />
   </x:Members>
   <VisualBasic.Settings>
     <x:Null />
   </VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>599.2,1172</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>939.2,1145.6</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>ProcessTransaction_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="30">
@@ -88,7 +89,7 @@
       <AssemblyReference>System.Text.RegularExpressions</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
-  <Sequence sap2010:Annotation.AnnotationText="Invoke major steps of the business process, which are usually implemented by multiple subworkflows.&#xA;&#xA;If a BusinessRuleException is thrown, the transaction is skipped. &#xA;If another kind of exception occurs, the current transaction can be retried. " DisplayName="Process" sap:VirtualizedContainerService.HintSize="551.2,1107.2" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence sap2010:Annotation.AnnotationText="Invoke major steps of the business process, which are usually implemented by multiple subworkflows.&#xA;&#xA;If a BusinessRuleException is thrown, the transaction is skipped. &#xA;If another kind of exception occurs, the current transaction can be retried. " DisplayName="Process" sap:VirtualizedContainerService.HintSize="551.2,1080.8" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="x:String" Name="strResult" />
     </Sequence.Variables>
@@ -100,17 +101,22 @@
     </sap:WorkflowViewStateService.ViewState>
     <ui:LogMessage DisplayName="Log Message Process Start" sap:VirtualizedContainerService.HintSize="508,131.2" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="Info" Message="[&quot;Started Process&quot;]" />
     <ui:Comment DisplayName="Comment (placeholder)" sap:VirtualizedContainerService.HintSize="508,65.6" sap2010:WorkflowViewState.IdRef="Comment_1" Text="//  Invoke steps of the process" />
-    <Switch x:TypeArguments="x:String" DisplayName="Switch" Expression="[in_TransactionItem.SpecificContent(&quot;Condition&quot;).toString]" sap:VirtualizedContainerService.HintSize="508,739.2" sap2010:WorkflowViewState.IdRef="Switch`1_1">
+    <Switch x:TypeArguments="x:String" DisplayName="Switch" Expression="[in_TransactionItem.SpecificContent(&quot;Condition&quot;).toString]" sap:VirtualizedContainerService.HintSize="508,599.2" sap2010:WorkflowViewState.IdRef="Switch`1_1">
       <Switch.Default>
         <Throw Exception="[new BusinessRuleException(&quot;Invalid condition&quot;)]" sap:VirtualizedContainerService.HintSize="334.4,102.4" sap2010:WorkflowViewState.IdRef="Throw_1" />
       </Switch.Default>
-      <Sequence x:Key="only alphabets" sap:VirtualizedContainerService.HintSize="400,472" sap2010:WorkflowViewState.IdRef="Sequence_2">
+      <sap:WorkflowViewStateService.ViewState>
+        <scg:Dictionary x:TypeArguments="x:String, x:Object">
+          <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+          <x:Boolean x:Key="IsPinned">False</x:Boolean>
+        </scg:Dictionary>
+      </sap:WorkflowViewStateService.ViewState>
+      <Sequence x:Key="only alphabets" sap:VirtualizedContainerService.HintSize="400,332" sap2010:WorkflowViewState.IdRef="Sequence_2">
         <sap:WorkflowViewStateService.ViewState>
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
             <x:Boolean x:Key="IsExpanded">True</x:Boolean>
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
-        <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="356.8,100" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[in_TransactionItem.SpecificContent(&quot;Value&quot;).toString +&quot;--alpha only&quot;]" />
         <ui:Replace BuilderPattern="[^a-zA-Z]+" sap:VirtualizedContainerService.HintSize="356.8,69.6" sap2010:WorkflowViewState.IdRef="Replace_1" Input="[in_TransactionItem.SpecificContent(&quot;Value&quot;).toString]" IsBuilderTabModified="True" Model="[{&quot;Index&quot;:0,&quot;OperationID&quot;:&quot;ADV&quot;,&quot;OperationName&quot;:&quot;Advanced&quot;,&quot;OperationValue&quot;:&quot;[^a-zA-Z]&quot;,&quot;QuantifierFirstValue&quot;:&quot;+&quot;,&quot;QuantifierID&quot;:&quot;OOM&quot;,&quot;QuantifierName&quot;:&quot;At least one (1 or more)&quot;,&quot;QuantifierSecondValue&quot;:null}]" Pattern="[^a-zA-Z]+" RegexOption="IgnoreCase, Compiled" Result="[strResult]">
           <ui:Replace.Replacement>
             <InArgument x:TypeArguments="x:String">
@@ -120,13 +126,12 @@
         </ui:Replace>
         <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="356.8,131.2" sap2010:WorkflowViewState.IdRef="LogMessage_2" Message="[strResult]" />
       </Sequence>
-      <Sequence x:Key="only special character" sap:VirtualizedContainerService.HintSize="400,472" sap2010:WorkflowViewState.IdRef="Sequence_3">
+      <Sequence x:Key="only special character" sap:VirtualizedContainerService.HintSize="400,332" sap2010:WorkflowViewState.IdRef="Sequence_3">
         <sap:WorkflowViewStateService.ViewState>
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
             <x:Boolean x:Key="IsExpanded">True</x:Boolean>
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
-        <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="356.8,100" sap2010:WorkflowViewState.IdRef="MessageBox_2" Text="[in_TransactionItem.SpecificContent(&quot;Value&quot;).toString +&quot;--SP only&quot;]" />
         <ui:Replace BuilderPattern="[a-zA-Z0-9]+" sap:VirtualizedContainerService.HintSize="356.8,69.6" sap2010:WorkflowViewState.IdRef="Replace_2" Input="[in_TransactionItem.SpecificContent(&quot;Value&quot;).toString]" IsBuilderTabModified="True" Model="[{&quot;Index&quot;:0,&quot;OperationID&quot;:&quot;ADV&quot;,&quot;OperationName&quot;:&quot;Advanced&quot;,&quot;OperationValue&quot;:&quot;[a-zA-Z0-9]&quot;,&quot;QuantifierFirstValue&quot;:&quot;+&quot;,&quot;QuantifierID&quot;:&quot;OOM&quot;,&quot;QuantifierName&quot;:&quot;At least one (1 or more)&quot;,&quot;QuantifierSecondValue&quot;:null}]" Pattern="[a-zA-Z0-9]+" RegexOption="IgnoreCase, Compiled" Result="[strResult]">
           <ui:Replace.Replacement>
             <InArgument x:TypeArguments="x:String">
@@ -136,13 +141,12 @@
         </ui:Replace>
         <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="356.8,131.2" sap2010:WorkflowViewState.IdRef="LogMessage_3" Message="[strResult]" />
       </Sequence>
-      <Sequence x:Key="only digits" sap:VirtualizedContainerService.HintSize="400,472" sap2010:WorkflowViewState.IdRef="Sequence_4">
+      <Sequence x:Key="only digits" sap:VirtualizedContainerService.HintSize="400,332" sap2010:WorkflowViewState.IdRef="Sequence_4">
         <sap:WorkflowViewStateService.ViewState>
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
             <x:Boolean x:Key="IsExpanded">True</x:Boolean>
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
-        <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="356.8,100" sap2010:WorkflowViewState.IdRef="MessageBox_3" Text="[in_TransactionItem.SpecificContent(&quot;Value&quot;).toString +&quot;--digits only&quot;]" />
         <ui:Replace BuilderPattern="[^0-9]+" sap:VirtualizedContainerService.HintSize="356.8,69.6" sap2010:WorkflowViewState.IdRef="Replace_3" Input="[in_TransactionItem.SpecificContent(&quot;Value&quot;).toString]" IsBuilderTabModified="True" Model="[{&quot;Index&quot;:0,&quot;OperationID&quot;:&quot;ADV&quot;,&quot;OperationName&quot;:&quot;Advanced&quot;,&quot;OperationValue&quot;:&quot;[^0-9]&quot;,&quot;QuantifierFirstValue&quot;:&quot;+&quot;,&quot;QuantifierID&quot;:&quot;OOM&quot;,&quot;QuantifierName&quot;:&quot;At least one (1 or more)&quot;,&quot;QuantifierSecondValue&quot;:null}]" Pattern="[^0-9]+" RegexOption="IgnoreCase, Compiled" Result="[strResult]">
           <ui:Replace.Replacement>
             <InArgument x:TypeArguments="x:String">
@@ -153,5 +157,13 @@
         <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="356.8,131.2" sap2010:WorkflowViewState.IdRef="LogMessage_4" Message="[strResult]" />
       </Sequence>
     </Switch>
+    <Assign sap:VirtualizedContainerService.HintSize="508,73.6" sap2010:WorkflowViewState.IdRef="Assign_1">
+      <Assign.To>
+        <OutArgument x:TypeArguments="x:String">[outMyResult]</OutArgument>
+      </Assign.To>
+      <Assign.Value>
+        <InArgument x:TypeArguments="x:String">[strResult]</InArgument>
+      </Assign.Value>
+    </Assign>
   </Sequence>
 </Activity>
